--- a/src/app/features/offer/detail/offer-menu-view.scss
+++ b/src/app/features/offer/detail/offer-menu-view.scss
@@ -3,6 +3,7 @@
 :host {
   display: block;
   width: 100%;
+  padding-bottom: 16px;
 }
 
 .menu-view {
