--- a/src/app/features/offer/index/offer-index-page.scss
+++ b/src/app/features/offer/index/offer-index-page.scss
@@ -3,6 +3,7 @@
 :host {
   display: block;
   width: 100%;
+  padding-bottom: 92px;
 }
 
 .filter-menu-content {
